html is ready to be styled

--- a/home.html
+++ b/home.html
@@ -37,7 +37,9 @@
 
             <label>How did we meet?
                 <select name="howwemet">
-                    <option value="School">School</option>
+                    <option value="School">Classroom</option>
+                    <option value="School">Job Fair</option>
+                    <option value="School">Meetup</option>
                 </select>
             </label>
 
@@ -61,6 +63,8 @@
                 Text
             </label>
         </fieldset>
+
+        <button type="submit">Submit</button>
     </form>
 </body>
 <footer>
